<resources>
    <string name="app_name">AplikasiAprilUTS1</string>
    <string name="title">My Profile</string>
    <string name="MyName">Rezal Wahyu Pratama</string>
    <string name="From">Mahasiswa Informatika Universitas PGRI Semarang</string>
    <string name="About">Rezal Wahyu Pratama adalah seorang Mahasiswa di Universitas swasta di semarang yaitu Universitas PGRI Semarang, dia masuk di Program Studi Informatika, Program Studi yang banyak orang bilang sulit. Program Study yang masuk di Fakultas Teknik dan Informatika tersebut mendapatkan akreditasi B, pada tahun 2019.</string>
    <string name="TitleDetail">Detail</string>
    <string name="TitleTable1">Tempat Lahir</string>
    <string name="TextTable1">Pati</string>
    <string name="TitleTable2">Tanggal Lahir</string>
    <string name="TextTable2">10 Juni 1999 (usia 20 tahun)</string>
    <string name="TitleTable3">Riwayat Pendidikan</string>
    <string name="TextTable31">SDN Angkatan Lor 03, \nMTs Tuan Sokolangu, Gabus, \nSMK Taruna Bangsa, Pati.</string>
    <string name="TitleMade">Tugas Ini Dibuat Oleh</string>
    <string name="TitleTableMade1">Nama</string>
    <string name="TitleTableMade2">NPM</string>
    <string name="TextTableMade1">: Rezal Wahyu Pratama</string>
    <string name="TextTableMade2">: 17670024</string>
    <string name="ButtonText">UTS Mobile Programing</string>
</resources>
